thêm cập nhật thời gian trong appleId
